update and start UI

--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create First</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Hello World</h1>
+    <div class="container">
+        <h1 class="title">Yel Yan</h1>
+        <h4 class="subtitle">Web Designer</h4>
+
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias sapiente impedit nemo!
+        </p>
+
+        <div class="">
+            <button type="button">Explore</button>
+        </div>
+    </div>
 </body>
 </html>
