--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
+    <nav>
+        <h1><a href="#" class="logo">LOGO</a></h1>
+
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
     <div class="container">
         <h1 class="title">Yel Yan</h1>
         <h4 class="subtitle">Web Designer</h4>
