update navitem to p tag

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Testimonials</a></li>
+            <p>Projects</p>
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
