--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
-            <p>Projects</p>
+            <li><a href="#"> Testimonials</li>
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
