--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#"> Testimonials</li>
+            <li><a href="#">Testimonials</li>
+            <li><a href="#">Blog</li>
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
