--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#"> Testimonials</li>
+            <li><a href="#"> Blog post</li>
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
